--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -14,6 +14,7 @@
         app:titleTextColor="@color/white">
 
         <ImageView
+            android:contentDescription="@string/back_to_home"
             android:id="@+id/arrowBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -40,6 +41,7 @@
             android:layout_height="180dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
+            android:contentDescription="@string/detailmovieposter"
             android:src="@color/black" />
 
         <TextView
@@ -117,7 +119,7 @@
                 style="@style/detailTitleText2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Bahasa :" />
+                android:text="@string/bahasa" />
 
             <TextView
                 android:id="@+id/movieLang"
@@ -138,18 +140,21 @@
             android:layout_below="@id/movieImage"
             android:layout_marginStart="18dp"
             android:layout_marginTop="18dp"
+            android:background="#D8D8D8"
             android:layout_marginEnd="18dp"
-            android:layout_marginBottom="18dp"
-            android:text="Detail Film :" />
+            android:text="@string/detail_film" />
 
         <TextView
-            style="@style/normalText"
             android:id="@+id/detaiLFilm"
+            style="@style/normalText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/detailTextTitle"
-            android:layout_marginStart="18dp"
-            android:layout_marginEnd="18dp"
+            android:background="#D8D8D8"
+            android:paddingStart="18dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:paddingEnd="18dp"
             android:text="@string/lorem_ipsum" />
     </RelativeLayout>
 </RelativeLayout>
