--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E4E4E4"
     tools:context=".fragment.HomeFragment">
 
     <androidx.appcompat.widget.Toolbar
@@ -24,6 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginEnd="16dp"
+            android:contentDescription="@string/profil"
             android:src="@drawable/ic_baseline_person_24" />
     </androidx.appcompat.widget.Toolbar>
 
