--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EAEAEA"
     tools:context=".fragment.DetailFragment">
 
     <androidx.appcompat.widget.Toolbar
@@ -37,100 +38,109 @@
 
         <ImageView
             android:id="@+id/movieImage"
-            android:layout_width="150dp"
-            android:layout_height="180dp"
+            android:layout_width="120dp"
+            android:layout_height="150dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:contentDescription="@string/detailmovieposter"
             android:src="@color/black" />
 
-        <TextView
-            android:id="@+id/movieTitle"
-            style="@style/cardTitleText"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             android:layout_toEndOf="@id/movieImage"
-            android:text="@string/judulFilm" />
+            android:backgroundTint="@color/white"
+            app:cardCornerRadius="8dp">
 
-        <LinearLayout
-            android:id="@+id/movieRatingGroup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/movieTitle"
-            android:layout_marginTop="8dp"
-            android:layout_toEndOf="@id/movieImage"
-            android:orientation="horizontal">
-
-            <TextView
-                style="@style/detailTitleText2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/rating" />
-
-            <TextView
-                android:id="@+id/movieRating"
-                style="@style/normalText"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginEnd="16dp"
-                android:text="@string/movieRating"
-                android:textColor="@color/black" />
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="12dp">
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/movieTitle"
+                    style="@style/cardTitleText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/judulFilm" />
+
+                <LinearLayout
+                    android:id="@+id/movieRatingGroup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        style="@style/detailTitleText2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/rating" />
+
+                    <TextView
+                        android:id="@+id/movieRating"
+                        style="@style/normalText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:layout_marginEnd="16dp"
+                        android:text="@string/movieRating"
+                        android:textColor="@color/black" />
+
+                </LinearLayout>
 
 
-        <LinearLayout
-            android:id="@+id/movieReleaseDateGroup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/movieRatingGroup"
-            android:layout_marginTop="8dp"
-            android:layout_toEndOf="@id/movieImage"
-            android:orientation="horizontal">
+                <LinearLayout
+                    android:id="@+id/movieReleaseDateGroup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:orientation="horizontal">
 
-            <TextView
-                style="@style/detailTitleText2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tanggal_rilis" />
+                    <TextView
+                        style="@style/detailTitleText2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/tanggal_rilis" />
 
-            <TextView
-                android:id="@+id/movieReleaseDate"
-                style="@style/normalText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:text="@string/movieDate"
-                android:textColor="@color/black" />
+                    <TextView
+                        android:id="@+id/movieReleaseDate"
+                        style="@style/normalText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:text="@string/movieDate"
+                        android:textColor="@color/black" />
 
-        </LinearLayout>
+                </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/movieLanguageGroup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/movieReleaseDateGroup"
-            android:layout_marginTop="8dp"
-            android:layout_toEndOf="@id/movieImage"
-            android:orientation="horizontal">
+                <LinearLayout
+                    android:id="@+id/movieLanguageGroup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:orientation="horizontal">
 
-            <TextView
-                style="@style/detailTitleText2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/bahasa" />
+                    <TextView
+                        style="@style/detailTitleText2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/bahasa" />
 
-            <TextView
-                android:id="@+id/movieLang"
-                style="@style/normalText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:text="@string/movieLanguage"
-                android:textColor="@color/black" />
+                    <TextView
+                        android:id="@+id/movieLang"
+                        style="@style/normalText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:text="@string/movieLanguage"
+                        android:textColor="@color/black" />
 
-        </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/detailTextTitle"
@@ -138,23 +148,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/movieImage"
-            android:layout_marginStart="18dp"
             android:layout_marginTop="18dp"
-            android:background="#D8D8D8"
-            android:layout_marginEnd="18dp"
-            android:text="@string/detail_film" />
+            android:background="@color/white"
+            android:paddingStart="18dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="18dp"
+            android:text="@string/detail_film"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/detaiLFilm"
             style="@style/normalText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_below="@id/detailTextTitle"
-            android:background="#D8D8D8"
+            android:background="@color/white"
             android:paddingStart="18dp"
             android:paddingTop="8dp"
-            android:paddingBottom="8dp"
             android:paddingEnd="18dp"
+            android:paddingBottom="16dp"
             android:text="@string/lorem_ipsum" />
     </RelativeLayout>
 </RelativeLayout>
